# lift

./: .gitignore  CMakeLists.txt  ChangeLog.txt  README.md  main.cpp
.github/workflows/: ci.yml
include/: lift.hpp
test/: CMakeLists.txt  main.cpp  tests.cpp
